--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <!-- link the css files -->
-    <link rel="stylesheet" href="/src/style.css">
-    <link rel="stylesheet" href="/src/output.css">
+    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="src/output.css">
 
     <!-- cdn link for font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
