--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
     </footer>
 
     <!-- links for js files -->
-    <script src="/src/index.js"></script>
-    <script src="/src/modals.js"></script>
+    <script src="src/index.js"></script>
+    <script src="src/modals.js"></script>
 </body>
 
 </html>
